--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html {
   font-size: 10px;
 }
 
+body {
+  user-select: none;
+}
+
 span {
   font-weight: bold;
   color: #fff;
@@ -22,7 +26,6 @@ span {
   position: fixed;
   top: 4.2rem;
   z-index: 1;
-  overflow: hidden;
   @media (min-width: 0px) and (max-width: 768px) {
     height: 7rem;
     top: 2rem;
@@ -89,17 +92,27 @@ span {
   top: 0;
   left: 0;
   overflow: hidden;
-  background: url("./img/canvas/2.jpg") center/cover no-repeat;
   .guide {
     position: absolute;
     top: calc(50% - 33.33px / 2);
     left: calc(50% - 248.13px / 2);
     font-size: 2.5rem;
     z-index: 1;
+    transition: opacity 0.3s ease-in-out;
     @media (min-width: 0px) and (max-width: 768px) {
       top: calc(50% - 18.79px / 2);
       left: calc(50% - 138.95px / 2);
       font-size: 1.4rem;
+    }
+  }
+  .nudake {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    canvas {
+      position: absolute;
     }
   }
 }
