--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ span {
     align-items: center;
     width: 100%;
     height: 100%;
+    background: center/cover no-repeat;
     canvas {
       position: absolute;
     }
