--- a/style.css
+++ b/style.css
@@ -38,16 +38,18 @@ span {
     max-width: 145rem;
     width: 100%;
     padding: 0 2rem;
-    > img {
-      width: 9rem;
-      height: 9rem;
-      @media (min-width: 421px) and (max-width: 768px) {
-        width: 7rem;
-        height: 7rem;
-      }
-      @media (min-width: 0px) and (max-width: 420px) {
-        width: 5rem;
-        height: 5rem;
+    a {
+      .logo {
+        width: 9rem;
+        height: 9rem;
+        @media (min-width: 421px) and (max-width: 768px) {
+          width: 7rem;
+          height: 7rem;
+        }
+        @media (min-width: 0px) and (max-width: 420px) {
+          width: 5rem;
+          height: 5rem;
+        }
       }
     }
     .header__wrapper--right {
@@ -99,11 +101,31 @@ span {
     left: calc(50% - 248.13px / 2);
     font-size: 2.5rem;
     z-index: 1;
+    opacity: 0;
     transition: opacity 0.3s ease-in-out;
     @media (min-width: 0px) and (max-width: 768px) {
       top: calc(50% - 18.79px / 2);
       left: calc(50% - 138.95px / 2);
       font-size: 1.4rem;
+    }
+  }
+  .progress-bar {
+    width: 0;
+    height: 0.4rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(calc(-50% - (24.8rem / 2)), -50%);
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index: 1;
+    @media (min-width: 0px) and (max-width: 768px) {
+      width: 0;
+      transform: translate(calc(-50% - (13.9rem / 2)), -50%);
+    }
+    .gage {
+      width: 0;
+      height: inherit;
+      background-color: #fff;
     }
   }
   .nudake {
@@ -113,6 +135,7 @@ span {
     width: 100%;
     height: 100%;
     background: center/cover no-repeat;
+    opacity: 0;
     canvas {
       position: absolute;
     }
