--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ span {
     top: calc(50% - 33.33px / 2);
     left: calc(50% - 248.13px / 2);
     font-size: 2.5rem;
+    text-shadow: 0 0 2rem rgba(0, 0, 0, 0.4);
     z-index: 1;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
