--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ span {
   font-weight: bold;
   color: #fff;
   text-transform: uppercase;
+  letter-spacing: -0.1rem;
 }
 
 .header {
@@ -26,7 +27,7 @@ span {
   height: 9rem;
   position: fixed;
   top: 4.2rem;
-  z-index: 1;
+  z-index: 2;
   @media (min-width: 0px) and (max-width: 768px) {
     height: 7rem;
     top: 2rem;
@@ -100,15 +101,20 @@ span {
     top: calc(50% - 33.33px / 2);
     left: calc(50% - 248.13px / 2);
     font-size: 2.5rem;
-    text-shadow: 0 0 2rem rgba(0, 0, 0, 0.4);
-    z-index: 1;
+    z-index: 2;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
     @media (min-width: 0px) and (max-width: 768px) {
       top: calc(50% - 18.79px / 2);
       left: calc(50% - 138.95px / 2);
       font-size: 1.4rem;
     }
+  }
+  .dim {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
   }
   .progress-bar {
     width: 0;
@@ -118,7 +124,7 @@ span {
     left: 50%;
     transform: translate(calc(-50% - (24.8rem / 2)), -50%);
     background-color: rgba(255, 255, 255, 0.5);
-    z-index: 1;
+    z-index: 2;
     @media (min-width: 0px) and (max-width: 768px) {
       width: 0;
       transform: translate(calc(-50% - (13.9rem / 2)), -50%);
