--- a/style.css
+++ b/style.css
@@ -98,14 +98,14 @@ span {
   overflow: hidden;
   .guide {
     position: absolute;
-    top: calc(50% - 33.33px / 2);
-    left: calc(50% - 248.13px / 2);
+    top: 50%;
+    left: 50%;
+    line-height: 0;
     font-size: 2.5rem;
+    transform: translate(-50%, -50%);
     z-index: 2;
     opacity: 0;
     @media (min-width: 0px) and (max-width: 768px) {
-      top: calc(50% - 18.79px / 2);
-      left: calc(50% - 138.95px / 2);
       font-size: 1.4rem;
     }
   }
@@ -155,6 +155,7 @@ span {
   width: 100%;
   position: fixed;
   bottom: 4.2rem;
+  z-index: 1;
   @media (min-width: 0px) and (max-width: 768px) {
     display: flex;
   }
