--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import "./reset.css";
 
 html {
   font-size: 10px;
@@ -90,6 +86,9 @@ span {
 }
 
 .main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -100,7 +99,6 @@ span {
     position: absolute;
     top: 50%;
     left: 50%;
-    line-height: 0;
     font-size: 2.5rem;
     transform: translate(-50%, -50%);
     z-index: 2;
@@ -136,15 +134,13 @@ span {
     }
   }
   .nudake {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
-    height: 100%;
-    background: center/cover no-repeat;
+    height: 100vh;
+    background: no-repeat center/cover;
     opacity: 0;
     canvas {
       position: absolute;
+      touch-action: none;
     }
   }
 }
