Test : touch action none 검증

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,14 @@
 
 html {
   font-size: 10px;
+  touch-action: none;
 }
 
 body {
   background-color: #000;
   user-select: none;
+  overflow: hidden;
+  touch-action: none;
 }
 
 span {
