--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ span {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   position: absolute;
   top: 0;
   left: 0;
@@ -111,7 +111,7 @@ span {
   }
   .dim {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 1;
@@ -137,7 +137,7 @@ span {
   }
   .nudake {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: no-repeat center/cover;
     opacity: 0;
     canvas {
