--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ span {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100dvh;
   position: absolute;
   top: 0;
   left: 0;
