--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,19 @@ span {
   letter-spacing: -0.1rem;
 }
 
+.sns {
+  display: flex;
+  gap: 4rem;
+}
+.sns .sns__instagram img {
+  width: 3rem;
+  height: 3rem;
+}
+.sns .sns__youtube img {
+  width: 4rem;
+  height: 3rem;
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -26,65 +39,26 @@ span {
   position: fixed;
   top: 4.2rem;
   z-index: 2;
-  @media (min-width: 0px) and (max-width: 768px) {
-    height: 7rem;
-    top: 2rem;
-  }
-  .header__wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 145rem;
-    width: 100%;
-    padding: 0 2rem;
-    a {
-      .logo {
-        width: 9rem;
-        height: 9rem;
-        @media (min-width: 421px) and (max-width: 768px) {
-          width: 7rem;
-          height: 7rem;
-        }
-        @media (min-width: 0px) and (max-width: 420px) {
-          width: 5rem;
-          height: 5rem;
-        }
-      }
-    }
-    .header__wrapper--right {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      span {
-        font-size: 1.6rem;
-        @media (min-width: 0px) and (max-width: 768px) {
-          font-size: 1.4rem;
-        }
-      }
-      .sns {
-        @media (min-width: 0px) and (max-width: 768px) {
-          display: none;
-        }
-      }
-    }
-  }
 }
-
-.sns {
+.header__wrapper {
   display: flex;
-  gap: 4rem;
-  .sns__instagram {
-    img {
-      width: 3rem;
-      height: 3rem;
-    }
-  }
-  .sns__youtube {
-    img {
-      width: 4rem;
-      height: 3rem;
-    }
-  }
+  justify-content: space-between;
+  align-items: center;
+  max-width: 145rem;
+  width: 100%;
+  padding: 0 2rem;
+}
+.header__wrapper a .logo {
+  width: 9rem;
+  height: 9rem;
+}
+.header__wrapper--right {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.header__wrapper--right span {
+  font-size: 1.6rem;
 }
 
 .main {
@@ -97,52 +71,45 @@ span {
   top: 0;
   left: 0;
   overflow: hidden;
-  .guide {
+}
+.main .guide {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 2.5rem;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  opacity: 0;
+}
+.main .dim {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+.main .progress-bar {
+  width: 0;
+  height: 0.4rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(calc(-50% - (24.8rem / 2)), -50%);
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 2;
+}
+.main .progress-bar .gage {
+  width: 0;
+  height: inherit;
+  background-color: #fff;
+}
+.main .nudake {
+  width: 100%;
+  height: 100%;
+  background: no-repeat center/cover;
+  opacity: 0;
+  canvas {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 2.5rem;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    opacity: 0;
-    @media (min-width: 0px) and (max-width: 768px) {
-      font-size: 1.4rem;
-    }
-  }
-  .dim {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 1;
-  }
-  .progress-bar {
-    width: 0;
-    height: 0.4rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(calc(-50% - (24.8rem / 2)), -50%);
-    background-color: rgba(255, 255, 255, 0.5);
-    z-index: 2;
-    @media (min-width: 0px) and (max-width: 768px) {
-      width: 0;
-      transform: translate(calc(-50% - (13.9rem / 2)), -50%);
-    }
-    .gage {
-      width: 0;
-      height: inherit;
-      background-color: #fff;
-    }
-  }
-  .nudake {
-    width: 100%;
-    height: 100%;
-    background: no-repeat center/cover;
-    opacity: 0;
-    canvas {
-      position: absolute;
-    }
   }
 }
 
@@ -153,7 +120,38 @@ span {
   position: fixed;
   bottom: 4.2rem;
   z-index: 1;
-  @media (min-width: 0px) and (max-width: 768px) {
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: 7rem;
+    top: 2rem;
+  }
+  .header__wrapper a .logo {
+    width: 7rem;
+    height: 7rem;
+  }
+  .header__wrapper--right span {
+    font-size: 1.4rem;
+  }
+  .header__wrapper--right .sns {
+    display: none;
+  }
+  .main .guide {
+    font-size: 1.4rem;
+  }
+  .main .progress-bar {
+    width: 0;
+    transform: translate(calc(-50% - (13.9rem / 2)), -50%);
+  }
+  .footer {
     display: flex;
+  }
+}
+
+@media (max-width: 420px) {
+  .header__wrapper a .logo {
+    width: 5rem;
+    height: 5rem;
   }
 }
